// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Empty ExpenseList with empty array  1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expense
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1}
      createdAt={0}
      description="rent"
      id="0"
      key="0"
      note="some note"
    />
    <ExpenseListItem
      amount={3}
      createdAt={-345600000}
      description="gum"
      id="1"
      key="1"
      note="some note"
    />
    <ExpenseListItem
      amount={5}
      createdAt={345600000}
      description="water bill"
      id="2"
      key="2"
      note="some note"
    />
  </div>
</div>
`;
